# mipt-parallel-computing

./: CMakeLists.txt  Field.cpp  Field.h  FieldRenderer.cpp  FieldRenderer.h  Game.cpp  Game.h  Makefile  exponent.c  field_gen.py  harmonic.c  harmonic_det.c  heat.cpp  heatmap.hpp  main.cpp  matrix.hpp  mpi1.cpp  mpi1a.cpp  mpi1b.cpp  order.c  plot.py  shooting.cpp  solver.hpp  solvers.hpp  test.sh
